<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:hint ="Please input your user name" />

<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/username"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:hint="Please input your password"
    android:inputType="textPassword" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Please confirm your password"
        android:inputType="textPassword" />

<Button
    android:id="@+id/signupBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password2"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:text="Sign Up" />
    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text=""
        android:layout_below="@+id/signupBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
