<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:text="UserName:"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="683dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="411dp"
        android:layout_height="135dp"
        android:text="Contact Information:"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="279dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="189dp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="16dp"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>