<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:hint="Comment:"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="350dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="25dp"
        android:text="Location:"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="682dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cancel"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="682dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="Review:"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="408dp"
        android:layout_height="34dp"
        android:text="Name： "
        tools:layout_editor_absoluteY="293dp" />

</androidx.constraintlayout.widget.ConstraintLayout>